[package]
name = "syrena_core"
version = "0.1.0"
authors = ["Evan Seaward <seaward.evan@gmail.com>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]